# vizeval

./: Dockerfile  README.md  pyproject.toml
src/vizeval/: main.py
src/vizeval/app/api/: __init__.py  run.py
src/vizeval/app/api/routes/: evaluation.py  user.py
src/vizeval/app/api/schemas/: evaluation.py  user.py
src/vizeval/app/services/: evaluation_service.py  repository_service.py  service_provider.py
src/vizeval/core/entities/: __init__.py  evaluation.py  evaluation_request.py  evaluation_result.py  user.py
src/vizeval/core/interfaces/: __init__.py  evaluation_queue.py  evaluator.py  vizeval_repository.py
src/vizeval/core/use_cases/: __init__.py  evaluate_request.py
src/vizeval/evaluators/: __init__.py  base.py  dummy.py  juridical.py  medical.py  medical_temp.py
src/vizeval/evaluators/fastval/: __init__.py  fastval.py  fastval_training.ipynb
src/vizeval/evaluators/gemma_shield/: __init__.py  gemma_shield.py  gemma_shield_training.ipynb
src/vizeval/infrastructure/: memory_repository.py
src/vizeval/infrastructure/queue/: memory_queue.py
src/vizeval/infrastructure/supabase/: supabase_store.py
src/vizeval/infrastructure/supabase/models/: __init__.py  evaluation_model.py  user_model.py
tests/api/: test_endpoints.py
tests/evaluators/: test_medical_evaluator.py
